--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 </head>
 <body>
 <p></p>
+<div class="container"></div>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquid commodi corporis culpa dolore dolores est et eum harum ipsa itaque iure maxime nemo nihil nobis, omnis optio pariatur, quae quaerat quas quis quo reiciendis sapiente.</p>
+<p>Lorem  consectetur adipisicing elit. Adipisci aliquid commodi corporis culpa dolore dolores est et eum harum ipsa itaque iure maxime nemo nihil nobis, omnis optio pariatur, quae quaerat quas quis quo reiciendis sapiente.</p>
 </body>
 </html>
